# rime-settings

./: .gitignore  README.md  default.custom.yaml  double_pinyin_flypy.custom.yaml  japanese.dict.yaml  japanese.schema.yaml  melt_eng.custom.dict.yaml  melt_eng.custom.yaml  melt_eng.dict.yaml  mise.toml  other_kaomoji.dict.yaml  pyproject.toml  rime_mint.custom.dict.yaml  rime_mint.custom.yaml  rime_mint.dict.yaml  rime_mint_flypy.custom.yaml  symbols_caps_v.yaml  symbols_v.yaml  weasel.custom.yaml
dicts/: arknights.dict.yaml  arknights.en.dict.yaml  custom_simple.dict.yaml  en_extend.dict.yaml  honkai_3rd.dict.yaml  honkai_starrail.dict.yaml  honkai_starrail_gonglve.dict.yaml  lobotomy.dict.yaml  lobotomy.en.dict.yaml  majsoul.dict.yaml  mihoyo.en.dict.yaml  projectsekai.dict.yaml
scripts/: auto-py-to-exe.json  sort.py  sort_cn_no.py  sort_new.py  sort_replace.py
