[project]
name = "rime-settings"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = []

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
